<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:background="@color/background_light"
    android:gravity="center"
    tools:context=".logIn.MobileNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
  >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="50dp"
            android:src="@drawable/icons8paperplane"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/tvEnterNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/otp_verification"
            android:textSize="22sp"
            android:textStyle="bold"
         />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha=".7"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/we_will_send_you_an_one_time_password_on_this_n_mobile_number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textSize="14sp"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="40dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/_018xxxxxxxx"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/get_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMobileNumber" />

        <!-- ProgressBar added below -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/etOTP"
            app:layout_constraintEnd_toEndOf="@+id/etOTP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmitOTP"
            tools:ignore="ExtraText" />
    </LinearLayout>

</ScrollView>

